[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/editor/level_maker.gd" type="Script" id=1]
[ext_resource path="res://scripts/editor/draw_map.gd" type="Script" id=2]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )
main_level = "res://scenes/game_scene.tscn"
map_properties = {
"line": [  ],
"sector": [  ],
"vertex": [  ]
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 512.0
margin_bottom = 320.0
color = Color( 0.345098, 0.345098, 0.345098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="drawFrame" type="ColorRect" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 264.0
margin_bottom = 264.0
rect_clip_content = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasModulate" type="CanvasModulate" parent="drawFrame"]
script = ExtResource( 2 )

[node name="followButton" type="Button" parent="."]
margin_left = 408.0
margin_top = 288.0
margin_right = 476.0
margin_bottom = 308.0
rect_scale = Vector2( 1.5, 1.5 )
text = "begin! ->"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="load_button" type="Button" parent="."]
margin_left = 400.0
margin_top = 136.0
margin_right = 468.0
margin_bottom = 156.0
rect_scale = Vector2( 1.5, 1.5 )
text = "import"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="toolOption" type="OptionButton" parent="."]
margin_left = 280.0
margin_top = 8.0
margin_right = 373.0
margin_bottom = 28.0
rect_scale = Vector2( 1.2, 1.2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="elementOption" type="OptionButton" parent="."]
margin_left = 392.0
margin_top = 8.0
margin_right = 485.0
margin_bottom = 28.0
rect_scale = Vector2( 1.2, 1.2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 8.0
margin_top = 272.0
margin_right = 66.0
margin_bottom = 303.0
rect_scale = Vector2( 2, 2 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "x: 0   y: 0
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 280.0
margin_top = 48.0
margin_right = 466.0
margin_bottom = 75.0
rect_scale = Vector2( 1.2, 1.2 )
text = "C:/Users/Erick/Downloads/data.pwod"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit2" type="LineEdit" parent="."]
margin_left = 280.0
margin_top = 88.0
margin_right = 466.0
margin_bottom = 115.0
rect_scale = Vector2( 1.2, 1.2 )
text = "E1M1"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="followButton" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="load_button" to="." method="_on_load_button_pressed"]
